--- a/index.html
+++ b/index.html
@@ -6,33 +6,46 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/main.css"></link>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"/>
 		<body>
 			<div id="main-outer">
-				<h1 align='center'>LinkedIn Coding Challenge</h1>
+				<h1 align='center'><font color="#0077B5"><b>LinkedIn Coding Challenge</b></font></h1>
 				<!-- Main DIV -->
 				<div class="well message col-md-8 col-md-offset-2">
 					<!-- Main Left Column -->
-					<div class="col-md-8">
+					<div class="col-md-9">
 						<!-- Title DIV -->
-						<div class="Title col-md-12" align="center"><h2><b>Hangman 2018</b></h2></div>
+						<div class="Title col-md-12" align="center"><h2><font color="#0077B5"><b>Hangman 2018</b></font></h2></div>
 						<div class="col-md-12" align="center" id="message"></div>
 						<!-- Hangman IMG DIV -->
-						<div class="IMG col-md-12" align="center" id="imgHangman"><img src="images/Hangman0.png" style="width:200px;height:200px;"></div>
-						<!-- Word Guessed -->
-						<div class="col-md-12" align="center" id="word"><br>Hangman by Dinh Luong<br><br></div>
-						<!-- Guess Left -->
-						<div class="col-md-4" align="left" id="guess">Guess Left: 06</div>
-						<!-- Character Guessed -->
-						<div class="col-md-8" align="left" id="characterGuessed">Guessed: </div>
-
+						<div class="col-md-7" align="center">
+							<div class="col-md-12" align="center" id="imgHangman">
+							<img src="images/HangmanStart.png" style="width:200px;height:200px;">
+							</div>
+							<!-- Word Guessed -->
+							<div class="col-md-12" align="center" id="word"><font size="5px"><b>Dinh Luong</b></font></div>
+							<!-- Guess Left -->
+							<div class="col-md-12" align="center" id="guess"><font size="4px"><b>Guesses Left: </b></font><font size="4px" color="#0077B5"><b>6</font></b></div>
+							<!-- Score -->
+							<div class="col-md-12" align="center" id="score"><font size="4px"><b>Score: </b></font><font size="4px" color="#0077B5"><b>0</font></b></div>
+						</div>
+						<!-- Character DIV -->
+						<div class="IMG col-md-5" align="center">
+							<div class="col-md-12" align="center" id="Characters">
+								</div>
+								<!-- <div class="col-md-12" align="center">
+									<button type="button" id="hint" class="btn btn-info ">hint</button>
+								</div> -->
+						</div>
 						<div class="col-md-12" align="left">
 							<br>
 							<div id="API"></div>
 						</div>
 					</div> <!-- Main Left Column ends -->
 					<!-- Main Right Column -->
-					<div class="col-md-4">
-						<div align="center""><font size="5"><b>Leader Board</b></font></div>
+					<div class="col-md-3">
+						<div align="center"><font size="5" color="#0077B5"><b>Leader Board</b></font></div>
 						<table>
 							<thead>
 								<tr>
@@ -80,11 +93,12 @@
 						</div>
 						<!-- Start DIV Size 3 -->
 						<div class="col-md-3" align="center">
-							<button type="button" class="btn btn-success" id="Start">New Game</button>
+							<button type="button" class="btn btn-primary" id="Start">New Game</button>
 						</div>
 					</div>
 					</div>
 				</div>
-				<script type="text/javascript" src="js/hangman.js"></script>
+				<script type="text/javascript" src="js/hangman2.js"></script>
+				<script type="text/javascript" src="js/appendButtons.js"></script>
 			</body>
 			</html>
