--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					</div>
 					</div>
 				</div>
-				<script type="text/javascript" src="js/hangman2.js"></script>
+				<script type="text/javascript" src="js/hangman.js"></script>
 				<script type="text/javascript" src="js/appendButtons.js"></script>
 			</body>
 			</html>
