--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/main.css"></link>
+		<title>LinkedIn Reach Program Coding Challenge 2018</title>
+	</head>
 		<body>
 			<nav class="navbar-fixed-top navbar navbar-inverse">
 				<div class = "col-md-8 col-md-offset-2" align="center">
