--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 								<label class="radio-inline"><input type="radio" id="diffHard" name="diffLevel">Hard</label>
 							</form></font>
 						</div>
-						<form class="navbar-form navbar-left">
+						<div class="navbar-form navbar-left">
 							<div class="form-group">
 								<input class="form-control" type="text" id="userName" maxlength="10" placeholder="Name">
 							</div>
 							<button type="button" class="btn btn-success " id="Start">New Game</button>
-						</form>
+						</div>
 					</div>
 				</div>
 			</nav>
@@ -56,6 +56,9 @@
 						<!-- Character DIV -->
 						<div class="IMG col-md-5" align="center">
 							<div class="col-md-12" align="center" id="Characters">
+							</div>
+							<div class="col-md-12 navbar-form navbar-left" align="center">
+								<input class="form-control" type="text" id="guessWord" maxlength="10" placeholder="Guess Full Word" size="15">
 							</div>
 							<div class="col-md-12" align="center">
 								<button type="button" id="hint" class="btn btn-info">hint</button>
